
                                    Hatari
                                   --------
                                Release Notes

 Version 1.9.0 (2015-09-10):
 ---------------------------

Emulation:
- STE Joypads:
  - Fix: Joypad A Option button
  - Fix: Joypad B extended buttons
- ACSI / IDE:
  - Fix: image file attribute check when using device files
  - Fix: v1.8 ACSI regression with A1=0 case
- GEMDOS HD:
  - Fix: matching exactly 8 chars long file names containing '.'
  - Better mapping of host errors to GEMDOS error codes
  - Support for mapping file names with 8-bit characters
    between host and Atari encodings (umlauted chars etc)
  - Program header (TT-RAM) allocate flags support
- CPU:
  - update WinUAE CPU core version from 2.3 -> 2.8.1 -> 3.0 -> 3.1
    - MMU emulation fixed
    - instruction/data cache emulation
    - better 68020/30 prefetch pipeline
    - cycle accuracy, etc.
  - in 68000 mode, remove some un-allowed <ea> for CMPI, BTST and TST
  - check for address error when new PC is set at the end of RTE, RTS and RTR
  - fix "move.b an,<ea>", it's not allowed and should give illegal instruction
  - improve stack frame for bus error and address error
  - allow bus control only for 030
    (i.e. prevent TOS forcing 16Mhz at boot with higher CPU levels)
- Memory:
  - TT-RAM / 32-bit addressing support both for TT & Falcon emulation
    (when using EmuTOS, this requires version 0.9.4 or later)
- FDC changes:
  - for STX disks, fix type I commands with verify bit on tracks with no sector
  - for ST/MSA, check read address and read track are not beyond max track
- MFP:
  - better emulation of GPIP, AER and DDR
- MIDI:
  - some RX/TX interrupt conditions were not correctly handled
  - TDRE bit is status register more accurately handled
- Video:
  - fix value when reading video counter $FF8205/07/09 in high res
- Blitter:
  - when transfer ends, hog bit should be cleared in control register
- DSP:
  - better emulation of the HREQ signal
