@@ -1,0 +1,6 @@
+#ifndef HATARI_SCSIDRV_H
+#define HATARI_SCSIDRV_H
+
+bool nf_scsidrv(Uint32 stack, Uint32 subid, Uint32 *retval);
+
+#endif /* HATARI_SCSIDRV_H */
